# xfollowing

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/App/: CefApp.cpp  CefApp.h  CefHandler.cpp  CefHandler.h
src/Core/: AutoFollower.cpp  AutoFollower.h  DingTalkNotifier.cpp  DingTalkNotifier.h  PostMonitor.cpp  PostMonitor.h
src/Data/: DataStorage.cpp  DataStorage.h  Keyword.h  Post.h
src/UI/: BrowserWidget.cpp  BrowserWidget.h  KeywordPanel.cpp  KeywordPanel.h  MainWindow.cpp  MainWindow.h  PostListPanel.cpp  PostListPanel.h
src/Utils/: Logger.cpp  Logger.h
tools/: README.txt  collect_following.js  merge_data.py  test_dingtalk.py
